doc-surrealdb_versioned_docs/version-1.x/surrealql/datamodel/strings.mdx
---
sidebar_position: 13
sidebar_label: Strings
title: Strings | SurrealQL
description: Strings can be used to store text values. All text fields can include unicode values, emojis, and tabular and multine breaks.

---

# Strings

Strings can be used to store text values. All text fields can include unicode values, emojis, and tabular and multine breaks.

```surql
CREATE person SET text = 'Lorem ipsum dolor sit amet';
```

Strings can be created using single quotation marks, or double quotation marks.

```surql
CREATE person SET text = "Lorem ipsum dolor sit amet";
```

Any string in SurrealDB can include unicode text.

```surql
CREATE person SET text = "I ❤️ SurrealDB";
```

Strings can also include line breaks.

```surql
CREATE person SET text = "This
is
over
multiple
lines";
```

## String prefixes <l className='purple'>Since 1.1.0</l>

In SurrealQL, strings can be enthusiastically converted into Record IDs, Datetimes or to UUIDs. 
String prefixes are a solution to this problem, in that you as the developer get to specify what the "string" contains.

### Overview

Here are a couple of examples of how string prefixes work:

```surql
RETURN s"5:20";
RETURN r"person:tobie";
```

### `s` -> string {#string}

The most commonly used string prefix, `s` tells the parser that the contents of this string is just a string. The `s` prefix shows up in the database output to make it clear to the viewer as well that the output is a string.

```surql
-- Will be interpreted as a record ID, because of the structure with the semicolon:
RETURN "5:20";
```

```bash title="Response"
⟨5⟩:20
```

```surql
-- Forcefully parsed as just a string
RETURN s"5:20";
```

```bash title="Response"
s'5:20'
```

Even a `datetime` with a time zone offset will be eagerly turned into a UTC datetime:

```surql
RETURN "2024-04-24T03:07:32+09:00";
```

```bash title="UTC output instead of +09:00 timezone"
'2024-04-23T18:07:32Z'
```

In this case as well the `s` prefix can be used to maintain the original format.

```surql
RETURN s"2024-04-24T03:07:32+09:00";
```

```bash title="Response"
s'2024-04-24T03:07:32+09:00'
```

### `r` -> record {#record}

The `r` prefix tells the parser that the contents of this string is a record ID.

```surql
RETURN r"person:john";
```

### `d` -> datetime {#datetime}

The `d` prefix tells the parser that the contents of this string is a DateTime.

```surql
RETURN d"2023-11-28T11:41:20.262Z";
```

### `u` -> UUID {#uuid}

The `u` prefix tells the parser that the contents of this string is a UUID.

```surql
RETURN u"8c54161f-d4fe-4a74-9409-ed1e137040c1";
```

### String prefixes vs. casting

String prefixes seem outwardly similar to casting, but differ in behaviour. A string prefix is an instruction to the parser to treat an input in a certain way, whereas a cast is an instruction to the database to convert one type into another.

As a result, incorrect input with a cast will generate an error:

```surql
// Change _ to - in both examples to fix the input
RETURN <uuid>"018f0e6a_9b95-7ecc-8a38-aea7bf3627dd";
RETURN <datetime>"2024_06-06T12:00:00Z";
```

```bash title="Response"
-------- Query 1 --------
"Expected a uuid but cannot convert '018f0e6a-9b95-7ecc-8a38-aea7bf3627d' into a uuid"

-------- Query 2 --------

"Expected a datetime but cannot convert '2024-06-06T12:00:00' into a datetime"
```

But the same input using a string prefix will not even parse until the input is valid.

```surql
// Will not parse in either case until _ is changed to -
RETURN u"018f0e6a_9b95-7ecc-8a38-aea7bf3627dd";
RETURN d"2024_06-06T12:00:00Z";
```

This also allows for immediate error messages on which part of the input is incorrect.

![A screenshot showing how a string prefix allows incorrect UUID input to be identified before a query can be run. In this case, the parser is able to inform the user that an underscore at column 18 is the issue.](parse_error_1.png)

![A screenshot showing how a string prefix allows incorrect datetime input to be identified before a query can be run. In this case, the parser is able to inform the user that an underscore at column 14 is the issue.](parse_error_2.png)