doc-surrealdb_versioned_docs/version-2.x/surrealql/datamodel/strings.mdx
---
sidebar_position: 13
sidebar_label: Strings
title: Strings | SurrealQL
description: Strings can be used to store text values. All text fields can include unicode values, emojis, and tabular and multine breaks.

---

import ThemedImage from '@theme/ThemedImage';
import useBaseUrl from '@docusaurus/useBaseUrl';
import Since from '@site/src/components/Since'

# Strings

Strings can be used to store text values. All text fields can include unicode values, emojis, and tabular and multine breaks.

```surql
CREATE person SET text = 'Lorem ipsum dolor sit amet';
```

Strings can be created using single quotation marks, or double quotation marks.

```surql
CREATE person SET text = "Lorem ipsum dolor sit amet";
```

Any string in SurrealDB can include unicode text.

```surql
CREATE person SET text = "I ❤️ SurrealDB";
```

Strings can also include line breaks.

```surql
CREATE person SET text = "This
is
over
multiple
lines";
```

## String prefixes 

<Since v="v1.1.0" />

In SurrealQL, there are several types of string like, quouted values each with a different prefix indicating it's type. Previously, in the `1.0` SurrealQL these types would eagerly convert strings to a different type depending on it's contents. 

However, since `2.0` strings no longer eagerly convert, instead if you want a string like value to be a type other then string you must prefix it with the correct prefix.

### Overview

Here are a couple of examples of how string prefixes work:

```surql
RETURN s"5:20";
RETURN r"person:tobie";
```

### `s` -> string {#string}

The most commonly used string prefix, `s` tells the parser that the contents of this string is just a string which also shows up in the database output to make it clear to the viewer as well that the output is a string.

Since `2.0`, all strings without a prefix will be plain strings. Including other datatypes that aren't clearly definded. So the following two queries are equivalent.

For example, the following query will be returned as a record ID: 
```surql
-- Will be interpreted as a String.
RETURN "5:20";
```
```bash title="Response"
['5:20']
```
Also, if the `s` prefix is used, the output will be returned as a string:
```surql
-- with an optional string prefix.
RETURN s"5:20";
```

The `s` prefix can be used to maintain the original format.

```surql
RETURN s"2024-04-24T03:07:32+09:00";
```

```bash title="Response"
s'2024-04-24T03:07:32+09:00'
```

### `r` -> record {#record}

The `r` prefix tells the parser that the contents of this string is a record ID. 

:::note
__Note:__ Without the `r` prefix the type of the value will be a string.
:::

```surql
RETURN r"person:john"; 
```

In the example below, using the [`type::is::string()`](/docs/surrealdb/2.x/surrealql/functions/database/type#typeisstring) and [`type::is::record`](/docs/surrealdb/2.x/surrealql/functions/database/type#typeisrecord) functions respectively, you can check the type of the string.

```surql
type::is::string("person:john");
type::is::record("person:john");
type::is::record(r"person:john");
```

```bash title="Response"
[true,false,true]
```

### `d` -> datetime {#datetime}

The `d` prefix tells the parser that the contents of this string is a DateTime.

```surql
RETURN d"2023-11-28T11:41:20.262Z";
```

### `u` -> UUID {#uuid}

The `u` prefix tells the parser that the contents of this string is a UUID.

```surql
RETURN u"8c54161f-d4fe-4a74-9409-ed1e137040c1";
```

### String prefixes vs. casting

String prefixes seem outwardly similar to casting, but differ in behaviour. A string prefix is an instruction to the parser to treat an input in a certain way, whereas a cast is an instruction to the database to convert one type into another.

As a result, incorrect input with a cast will generate an error:

```surql
// Change _ to - in both examples to fix the input
RETURN <uuid>"018f0e6a_9b95-7ecc-8a38-aea7bf3627dd";
RETURN <datetime>"2024_06-06T12:00:00Z";
```

```bash title="Response"
-------- Query 1 --------
"Expected a uuid but cannot convert '018f0e6a-9b95-7ecc-8a38-aea7bf3627d' into a uuid"

-------- Query 2 --------

"Expected a datetime but cannot convert '2024-06-06T12:00:00' into a datetime"
```

But the same input using a string prefix will not even parse until the input is valid.

```surql
// Will not parse in either case until _ is changed to -
RETURN u"018f0e6a_9b95-7ecc-8a38-aea7bf3627dd";
RETURN d"2024_06-06T12:00:00Z";
```

This also allows for immediate error messages on which part of the input is incorrect. As seen in the image below, the parser is able to inform the user that an underscore at column 18 is the issue.

<ThemedImage
  alt="A screenshot showing how a string prefix allows incorrect UUID input to be identified before a query can be run. In this case, the parser is able to inform the user that an underscore at column 18 is the issue."
  sources={{
    light: useBaseUrl('img/parse-error.png'),
    dark: useBaseUrl('img/parse-error.png'),
  }}
/>